force-app/main/default/objects/Expense_Detail__c/Expense_Detail__c.object-meta.xml
<CustomObject>
    <description>Object to Store Time frame and Amount Information related to Expense Account.</description>
    <label>Expense Detail</label>
    <nameField>
        <displayFormat>ED - {0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>