force-app/main/default/objects/Expense_Detail__c/fields/Amount_of_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Revenue__c</fullName>
    <label>% Amount of Revenue</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>