force-app/main/default/objects/Expense_Detail__c/fields/Annual_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Expense_Amount__c</fullName>
    <formula>IF(Is_Annual_Amount__c, Expense_Amount__c, Expense_Amount__c * 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>