force-app/main/default/objects/Expense_Detail__c/fields/Expense_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_Account__c</fullName>
    <label>Expense Account</label>
    <referenceTo>Expense_Account__c</referenceTo>
    <relationshipLabel>Expense Details</relationshipLabel>
    <relationshipName>Expense_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>