force-app/main/default/objects/Expense_Detail__c/fields/GL_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Id__c</fullName>
    <formula>Expense_Account__r.GL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Account Id</label>
    <type>Text</type>
</CustomField>