force-app/main/default/objects/Expense_Detail__c/fields/Is_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Is_Annual_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Annual Amount</label>
    <type>Checkbox</type>
</CustomField>