force-app/main/default/objects/Expense_Detail__c/fields/Monthly_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expense_Amount__c</fullName>
    <formula>IF(Is_Annual_Amount__c,  Expense_Amount__c / 12, Expense_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>