force-app/main/default/objects/Expense_Detail__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <formula>Text(Expense_Account__r.Payment_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Frequency</label>
    <type>Text</type>
</CustomField>