force-app/main/default/objects/Expense_Detail__c/fields/Revenue_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_GL_Account__c</fullName>
    <formula>CASESAFEID(Expense_Account__r.GL_Account_Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue GL Account</label>
    <type>Text</type>
</CustomField>