force-app/main/default/objects/Expense_Detail__c/fields/Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Id__c</fullName>
    <formula>Expense_Account__r.Vendor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Id</label>
    <type>Text</type>
</CustomField>