force-app/main/default/objects/Expense_Detail__c/recordTypes/Non_Recurring.recordType-meta.xml
<RecordType>
    <fullName>Non_Recurring</fullName>
    <active>true</active>
    <description>This record type represents the Non Recurring record type.</description>
    <label>Non Recurring</label>
</RecordType>