force-app/main/default/objects/Expense_Detail__c/recordTypes/Recurring.recordType-meta.xml
<RecordType>
    <fullName>Recurring</fullName>
    <active>true</active>
    <description>This record type represents the Recurring record type.</description>
    <label>Recurring</label>
</RecordType>