force-app/main/default/objects/Expense_Detail__c/recordTypes/Revenue_Expense_Recurring.recordType-meta.xml
<RecordType>
    <fullName>Revenue_Expense_Recurring</fullName>
    <active>true</active>
    <label>Revenue Expense Recurring</label>
</RecordType>