force-app/main/default/objects/Expense_Detail__c/validationRules/Amount_not_greater_than_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_not_greater_than_100</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_of_Revenue__c &gt; 1.0</errorConditionFormula>
    <errorMessage>% Amount of revenue cannot be greater than 100.</errorMessage>
</ValidationRule>