force-app/main/default/objects/Expense_Detail__c/validationRules/EndDate_Should_be_Greater_than_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Should_be_Greater_than_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(End_Date__c)),
NOT(ISBLANK(Start_Date__c)),
End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date can not be less than Start Date.</errorMessage>
</ValidationRule>